--- a/EnerBank.IOUtils/EnerBank.IOUtils.csproj
+++ b/EnerBank.IOUtils/EnerBank.IOUtils.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{92CB29CE-0EC5-4BBF-9807-F0F0FE1D649D}</ProjectGuid>
+    <ProjectGuid>{AF09E213-061A-436C-A0A6-39F05ED24CB3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EnerBank.DataItem</RootNamespace>
-    <AssemblyName>EnerBank.DataItem</AssemblyName>
+    <RootNamespace>EnerBank.IOUtils</RootNamespace>
+    <AssemblyName>EnerBank.IOUtils</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,16 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccreditoDataItem.cs" />
-    <Compile Include="FiltroEstrazioniDataItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ResultEstrazioneDataItem.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\EnerBank.Interfaces\EnerBank.Interfaces.csproj">
-      <Project>{16f314e9-65d9-4c25-a007-e875b5aa1d27}</Project>
-      <Name>EnerBank.Interfaces</Name>
-    </ProjectReference>
+    <Compile Include="Reader.cs" />
+    <Compile Include="Writer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
