--- a/EnerBank.DataItem/EnerBank.DataItem.csproj
+++ b/EnerBank.DataItem/EnerBank.DataItem.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccreditoDataItem.cs" />
-    <Compile Include="FiltroEstrazioniDataItem.cs" />
+    <Compile Include="EstrazioneDataItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResultEstrazioneDataItem.cs" />
   </ItemGroup>
