--- a/EnerBank.Model.Tests/EnerBank.Model.Tests.csproj
+++ b/EnerBank.Model.Tests/EnerBank.Model.Tests.csproj
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BC4A112A-E399-45DF-A857-A50F28239E19}</ProjectGuid>
+    <ProjectGuid>{8BEB4D6C-9E84-4660-B626-843FA5C12CD3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Enerbank.Model.Test</RootNamespace>
-    <AssemblyName>Enerbank.Model.Test</AssemblyName>
+    <RootNamespace>EnerBank.Model.Tests</RootNamespace>
+    <AssemblyName>EnerBank.Model.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -16,6 +16,8 @@
     <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
+    <CodeContractsEnableRuntimeChecking>True</CodeContractsEnableRuntimeChecking>
+    <CodeContractsRuntimeCheckingLevel>Full</CodeContractsRuntimeCheckingLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,7 +37,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Pex.Framework">
+      <HintPath>..\..\..\..\..\..\..\..\Program Files\Microsoft Visual Studio 14.0\Common7\IDE\Extensions\Microsoft\Pex\Microsoft.Pex.Framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EnerBank.Model\EnerBank.Model.csproj">
+      <Project>{38A0FD96-7973-471B-B7C1-94C1CE0C9F4F}</Project>
+      <Name>EnerBank.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="AccreditiTest.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\PexAssemblyInfo.cs" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -49,23 +65,6 @@
       </ItemGroup>
     </Otherwise>
   </Choose>
-  <ItemGroup>
-    <Compile Include="AccreditiTest.cs" />
-    <Compile Include="DataUtils.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="EstrazioniTest.cs" />
-    <Compile Include="ReportEstrazioneAccreditiTest.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\EnerBank.Interfaces\EnerBank.Interfaces.csproj">
-      <Project>{16f314e9-65d9-4c25-a007-e875b5aa1d27}</Project>
-      <Name>EnerBank.Interfaces</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\EnerBank.Model\EnerBank.Model.csproj">
-      <Project>{38a0fd96-7973-471b-b7c1-94c1ce0c9f4f}</Project>
-      <Name>EnerBank.Model</Name>
-    </ProjectReference>
-  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
