--- a/EnerBank.Model/EnerBank.Model.csproj
+++ b/EnerBank.Model/EnerBank.Model.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accrediti.cs" />
-    <Compile Include="FiltroEstrazioni.cs" />
+    <Compile Include="Estrazioni.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReportEstrazioneAccrediti.cs" />
   </ItemGroup>
