Includo anche i file resource nella solution

--- a/EnerBank/EnerBank.UI.csproj
+++ b/EnerBank/EnerBank.UI.csproj
@@ -110,6 +110,12 @@
       <Name>EnerBank.UI.MVVMLight</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\accrediti.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\estrazioni.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
