--- a/EnerBank.Console/project.json
+++ b/EnerBank.Console/project.json
@@ -17,5 +17,10 @@
       },
       "imports": "dnxcore50"
     }
-  }
+  },
+    "runtimes": {
+       "win10-x64": {},
+       "osx.10.11-x64": {},
+       "ubuntu.16.04-x64": {}
+     }
 }
