Aggiornato modello con una logica a servizi

--- a/EnerBank.DataItem/EnerBank.DataItem.csproj
+++ b/EnerBank.DataItem/EnerBank.DataItem.csproj
@@ -43,6 +43,7 @@
     <Compile Include="EstrazioneDataItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResultEstrazioneDataItem.cs" />
+    <Compile Include="WorkSession.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EnerBank.Interfaces\EnerBank.Interfaces.csproj">
