--- a/EnerBank.Interfaces/EnerBank.Interfaces.csproj
+++ b/EnerBank.Interfaces/EnerBank.Interfaces.csproj
@@ -44,6 +44,9 @@
     <Compile Include="IEstrazione.cs" />
     <Compile Include="IEstrazioni.cs" />
     <Compile Include="IReportEstrazioneAccrediti.cs" />
+    <Compile Include="ISessionWorker.cs" />
+    <Compile Include="IWorkSession.cs" />
+    <Compile Include="IWorkSessionRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IResultEstrazione.cs" />
   </ItemGroup>
