--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch",
+            "name": "Launch Console",
             "type": "mono",
             "request": "launch",
             "program": "${workspaceRoot}/EnerBank.Console/bin/Debug/netcoreapp1.0/EnerBank.Console.dll",
@@ -22,9 +22,9 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceRoot}/EnerBank.Web/bin/Debug/netcoreapp1.1/EnerBank.Web.dll",
+            "program": "${workspaceRoot}/EnerBank.Ui.Web/bin/Debug/netcoreapp1.1/EnerBank.Ui.Web.dll",
             "args": [],
-            "cwd": "${workspaceRoot}/EnerBank.Web/",
+            "cwd": "${workspaceRoot}/EnerBank.Ui.Web/",
             "stopAtEntry": false,
             "internalConsoleOptions": "openOnSessionStart",
             "launchBrowser": {
@@ -45,46 +45,8 @@
                 "ASPNETCORE_ENVIRONMENT": "Development"
             },
             "sourceFileMap": {
-                "/Views": "${workspaceRoot}/EnerBank.Web/Views"
+                "/Views": "${workspaceRoot}/EnerBank.Ui.Web/Views"
             }
-        },
-        {
-            "name": "A .NET Core Launch (web)",
-            "type": "coreclr",
-            "request": "launch",
-            "preLaunchTask": "build",
-            "program": "${workspaceRoot}/a/bin/Debug/netcoreapp1.1/a.dll",
-            "args": [],
-            "cwd": "${workspaceRoot}/a",
-            "stopAtEntry": false,
-            "internalConsoleOptions": "openOnSessionStart",
-            "launchBrowser": {
-                "enabled": true,
-                "args": "${auto-detect-url}",
-                "windows": {
-                    "command": "cmd.exe",
-                    "args": "/C start ${auto-detect-url}"
-                },
-                "osx": {
-                    "command": "open"
-                },
-                "linux": {
-                    "command": "xdg-open"
-                }
-            },
-            "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            },
-            "sourceFileMap": {
-                "/Views": "${workspaceRoot}/a/Views"
-            }
-        },
-        {
-            "name": "Attach",
-            "type": "mono",
-            "request": "attach",
-            "address": "localhost",
-            "port": 55555
         }
     ]
 }
