--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "taskName": "build",
             "args": [
-                "${workspaceRoot}/EnerBank.Web/project.json"
+                "${workspaceRoot}/EnerBank.Ui.Web/project.json"
             ],
             "isBuildCommand": true,
             "problemMatcher": "$msCompile"
