Aggiunto ref a Environment.Injector

--- a/EnerBank.Console/project.json
+++ b/EnerBank.Console/project.json
@@ -13,7 +13,8 @@
           "version": "1.0.1"
         },
         "EnerBank.Interfaces":"*",
-        "EnerBank.Model":"*"
+        "EnerBank.Model":"*",
+        "Environment.Injector": "1.*"
       },
       "imports": "dnxcore50"
     }
